--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -6,6 +6,13 @@
     align-items: center;
 }
 
+.tile .chess-piece{
+    width: 100px;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 80px;
+}
 .white-tile {
     background-color: #ebecd0;
 }
@@ -14,6 +21,6 @@
     background-color: #779556;
 }
 
-.tile .chess-piece-image {
-    width: 75px;
+.tile img {
+    width: 80px;
 }
