--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -13,6 +13,12 @@
     background-position: center;
     background-size: 80px;
 }
+.tile .chess-piece:hover{
+    cursor: grab;
+}
+.tile .chess-piece:active{
+    cursor: grabbing;
+}
 .white-tile {
     background-color: #ebecd0;
 }
